--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,41 +28,27 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  build_runner: ^2.4.11
+  cupertino_icons: ^1.0.2
+  dio: ^5.3.3
+  easy_localization: ^3.0.3
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  # State management
   flutter_bloc: ^8.1.3
-  # Code generator (mainly used with cubit & retrofit)
+  flutter_native_splash: ^2.3.5
+  flutter_screenutil: ^5.9.0
+  flutter_svg: ^2.0.9
   freezed: ^2.4.5
   freezed_annotation: ^2.4.1
-  # for dependency injection
   get_it: ^7.6.4
-  # Automatically generate code for converting to and from JSON by annotating Dart classes
-  json_serializable: ^6.7.1
+  intl: ^0.19.0
   json_annotation: ^4.8.1
-  # Networking
-  dio: ^5.3.3
+  json_serializable: ^6.7.1
+  pretty_dio_logger: ^1.3.1
   retrofit: ^4.0.3
   retrofit_generator: ^8.0.4
-  pretty_dio_logger: ^1.3.1
-  # localization
-  intl: ^0.19.0
-  easy_localization: ^3.0.3
-  # for splash screen
-  flutter_native_splash: ^2.3.5
-  # An SVG rendering and widget library for Flutter, which allows painting 
-  flutter_svg: ^2.0.9
-  # for adapting screen and font size.
-  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -70,10 +56,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -87,13 +74,10 @@ flutter:
     - assets/images/
     - assets/svgs/
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
